--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
 
 </head>
 <body>
-<h1 style="color:red">Заголовак першого рівня</h1>
-<p>тут є текст параграфа</p>
-<h3>заголовок 3 рівня</h3>
-<p>Ще трохи тексту  </p>
+<h1 style="color:red">А це обновлення і другий коміт</h1>
+
 
 </body>
 </html>
