--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-<h1 style="color:red">А це обновлення і другий коміт</h1>
+<h1 style="color:red">А це третій коміт</h1>
 
 
 </body>
